# rust_game_2d

./: Cargo.toml  LICENSE  README.md
rsc/shader/: shader.fs  shader.vs
src/: main.rs  shader.rs  vertex.rs
